# dtolnay-itoa-benchmark

./: Cargo.toml  build.rs
.github/workflows/: ci.yml
src/: args.rs  bcd.rs  bcd4.rs  branchlut2.rs  countdecimaldigit.rs  countlut.rs  data.rs  digitslut.rs  itoa_jeaiii.rs  itoa_ljust.rs  lut.rs  main.rs  mwilson.rs  numbuffer.rs  test_all.rs  unsigned.rs  yy.rs  zmij.rs
