[package]
name = "itoa-benchmark"
version = "0.0.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "This benchmark evaluates the performance of Rust libraries for rendering fixed-precision integer primitives to ASCII base-10 string"
edition = "2024"
license = "MIT"
repository = "https://github.com/dtolnay/itoa-benchmark"

[dependencies]
anyhow = "1"
arrayvec = "0.7"
itoa = "1.0.16"
lexical-core = "1"
paste = "1"
rand = "0.10"
to-arraystring = "0.2"
